autoconf/automake update

--- a/modplug-tools/configure.ac
+++ b/modplug-tools/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT
+AC_INIT([modplugtools],[0.5.3])
 AC_CONFIG_SRCDIR([Makefile.am])
 
 AC_CANONICAL_HOST
@@ -6,7 +6,7 @@ AC_CANONICAL_TARGET
 
 AC_PREREQ(2.53)
 
-AM_INIT_AUTOMAKE([modplugtools],[0.5.3])
+AM_INIT_AUTOMAKE
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 AM_SILENT_RULES([yes])
 AM_MAINTAINER_MODE
